@@ -118,6 +118,7 @@ LUFA_PATH = ../..
 LUFA_OPTS  = -D USB_DEVICE_ONLY
 LUFA_OPTS += -D USE_NONSTANDARD_DESCRIPTOR_NAMES
 LUFA_OPTS += -D CONTROL_ONLY_DEVICE
+LUFA_OPTS += -D DEVICE_STATE_AS_GPIOR0
 LUFA_OPTS += -D FIXED_CONTROL_ENDPOINT_SIZE=8
 LUFA_OPTS += -D TOTAL_NUM_CONFIGURATIONS=1
 LUFA_OPTS += -D USE_RAM_DESCRIPTORS
